crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI014_PYI014.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 3
    column: 6
  end_location:
    row: 3
    column: 16
  fix:
    edits:
      - location:
          row: 3
          column: 6
        end_location:
          row: 3
          column: 16
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 29
    column: 6
  end_location:
    row: 32
    column: 5
  fix:
    edits:
      - location:
          row: 29
          column: 6
        end_location:
          row: 32
          column: 5
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 35
    column: 6
  end_location:
    row: 47
    column: 5
  fix:
    edits:
      - location:
          row: 35
          column: 6
        end_location:
          row: 47
          column: 5
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 50
    column: 6
  end_location:
    row: 53
    column: 5
  fix:
    edits:
      - location:
          row: 50
          column: 6
        end_location:
          row: 53
          column: 5
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 56
    column: 6
  end_location:
    row: 56
    column: 18
  fix:
    edits:
      - location:
          row: 56
          column: 6
        end_location:
          row: 56
          column: 18
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 59
    column: 6
  end_location:
    row: 59
    column: 21
  fix:
    edits:
      - location:
          row: 59
          column: 6
        end_location:
          row: 59
          column: 21
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 61
    column: 10
  end_location:
    row: 61
    column: 45
  fix:
    edits:
      - location:
          row: 61
          column: 10
        end_location:
          row: 61
          column: 45
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 63
    column: 6
  end_location:
    row: 63
    column: 19
  fix:
    edits:
      - location:
          row: 63
          column: 6
        end_location:
          row: 63
          column: 19
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 66
    column: 6
  end_location:
    row: 66
    column: 21
  fix:
    edits:
      - location:
          row: 66
          column: 6
        end_location:
          row: 66
          column: 21
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 69
    column: 6
  end_location:
    row: 69
    column: 15
  fix:
    edits:
      - location:
          row: 69
          column: 6
        end_location:
          row: 69
          column: 15
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 72
    column: 6
  end_location:
    row: 72
    column: 11
  fix:
    edits:
      - location:
          row: 72
          column: 6
        end_location:
          row: 72
          column: 11
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 75
    column: 6
  end_location:
    row: 75
    column: 13
  fix:
    edits:
      - location:
          row: 75
          column: 6
        end_location:
          row: 75
          column: 13
        content: "..."
  parent: ~
- kind:
    name: ArgumentDefaultInStub
    body: Only simple default values allowed for arguments
    suggestion: "Replace default value with `...`"
    fixable: true
  location:
    row: 78
    column: 6
  end_location:
    row: 78
    column: 19
  fix:
    edits:
      - location:
          row: 78
          column: 6
        end_location:
          row: 78
          column: 19
        content: "..."
  parent: ~

