crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI018_PYI018.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI018.pyi:4:1: PYI018 Private TypeVar `_T` is never used
  |
2 | from typing import TypeVar
3 | 
4 | _T = typing.TypeVar("_T")
  | ^^ PYI018
5 | _P = TypeVar("_P")
  |

PYI018.pyi:5:1: PYI018 Private TypeVar `_P` is never used
  |
4 | _T = typing.TypeVar("_T")
5 | _P = TypeVar("_P")
  | ^^ PYI018
6 | 
7 | # OK
  |


