crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI021_PYI021.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
expression: diagnostics
---
- - kind:
      name: DocstringInStub
      body: Docstrings should not be included in stubs
      suggestion: ~
      fixable: false
    location:
      row: 1
      column: 0
    end_location:
      row: 1
      column: 9
    fix: ~
    parent: ~
  - kind:
      name: DocstringInStub
      body: Docstrings should not be included in stubs
      suggestion: ~
      fixable: false
    location:
      row: 4
      column: 4
    end_location:
      row: 4
      column: 13
    fix: ~
    parent: ~
  - kind:
      name: DocstringInStub
      body: Docstrings should not be included in stubs
      suggestion: ~
      fixable: false
    location:
      row: 7
      column: 4
    end_location:
      row: 7
      column: 13
    fix: ~
    parent: ~

