crates/ruff/src/rules/flake8_pyi/snapshots/ruff__rules__flake8_pyi__tests__PYI024_PYI024.pyi.snap
---
source: crates/ruff/src/rules/flake8_pyi/mod.rs
---
PYI024.pyi:1:25: PYI024 [*] Use `typing.NamedTuple` instead of `collections.namedtuple`
  |
1 | from collections import namedtuple   # PYI024
  |                         ^^^^^^^^^^ PYI024
  |
  = help: Replace `collections.namedtuple` with `typing.NamedTuple`

ℹ Possible fix
1   |-from collections import namedtuple   # PYI024
  1 |+from typing import NamedTuple   # PYI024


